# bitaekcoin

./: Cargo.toml  README.md
app/: package-lock.json  package.json
app/src/: App.svelte  Blocks.svelte  Logo.svelte  Sidebar.svelte
app/src/lib/components/: Pagination.svelte  Pending.svelte  Sidebar.svelte  Toast.svelte
app/src/lib/stores/: account.js  block.js  mempool.js  notification.js  notifications.js
app/src/routes/: +layout.svelte  +page.svelte  Sidebar.svelte
app/src/routes/accounts/: +page.svelte
app/src/routes/blocks/: +page.svelte
bitaekcoin/: Cargo.toml
bitaekcoin/src/: block.rs  encode.rs  hash.rs  transaction.rs  utils.rs
bitaekcoin/src/script/: instruction.rs  mod.rs
bitaekcoin/tests/: block_100000.rs  p2pkh.rs  p2sh_p2wpkh.rs  p2wsh.rs
masternode/: Cargo.toml
masternode/src/: account.rs  database.rs  lib.rs  main.rs  mempool.rs  node.rs  server.rs
src/: block.rs  encode.rs  hash.rs  lib.rs  transaction.rs  utils.rs
src/script/: mod.rs
tests/: block_100000.rs  p2ms.rs  p2pk.rs  p2pkh.rs  p2sh.rs  p2sh_p2wsh.rs  p2wpkh.rs
