[package]
name = "masternode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitaekcoin = { path = "../bitaekcoin" }
hex-literal = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
k256 = "0.13.1"
rand = "0.8.5"
serde = { version = "1.0.160", features = ["derive"] }
